[metadata]
name = teamchat
summary = teamchat breaks the barriers between communities and instant messaging platforms
description-file =
    README.rst
author = David Moreau-Simard
author-email = me@dmsimard.com
python-requires = >=3.6
home-page = https://github.com/dmsimard/teamchat
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/local/share/teamchat/ansible = ansible/*
packages =
    teamchat

[entry_points]
console_scripts =
    teamchat = teamchat.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
